style:format code According to alibaba specification